# pycwmanage

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  conftest.py  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  publish.yml
pycwmanage/: __init__.py  cwmanage.py
tests/: test_cwmanage.py
