[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycwmanage"
version = "0.1.0"
description = "Python client library for ConnectWise Manage REST API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "CaeNeb, LLC", email = "marcus@marcusbevans.com"}
]
maintainers = [
    {name = "Marcus Evans", email = "marcus@marcusbevans.com"}
]
keywords = ["connectwise", "manage", "api", "client", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "python-dotenv>=0.19.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/marcusbevans/pycwmanage"
Documentation = "https://github.com/marcusbevans/pycwmanage#readme"
"Bug Tracker" = "https://github.com/marcusbevans/pycwmanage/issues"
"Source Code" = "https://github.com/marcusbevans/pycwmanage"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["pycwmanage"]
omit = ["*/tests/*", "*/test_*.py"]